--- a/02_栈结构/index.html
+++ b/02_栈结构/index.html
@@ -12,13 +12,77 @@
         this.items = []
 
         // 栈相关操作
-
+        // 1.将元素压入栈
+        // this.push = function () {
+        // }
+        Stack.prototype.push = function (element) {
+            this.items.push(element)
+        }
+        // 2.从栈中取出元素
+        Stack.prototype.pop = function () {
+            return this.items.pop()
+        }
+        // 3.查看以下栈顶元素
+        Stack.prototype.peek = function () {
+            return this.items[this.items.length - 1]
+        }
+        // 4.判断栈是否为空
+        Stack.prototype.isEmpty = function () {
+            return this.items.length == 0
+        }
+        // 5.获取栈中元素的个数
+        Stack.prototype.size = function () {
+            return this.items.length
+        }
+        // 6.toString方法
+        Stack.prototype.toString = function () {
+            var resultString = ''
+            for (let i = 0; i < this.items.length; i++) {
+                resultString += this.items[i] + ' '
+            }
+            return resultString
+        }
     }
 
-    //栈的使用
-    var s = new Stack()
+    // //栈的使用
+    // var s = new Stack()
+    // // push() 测试
+    // s.push(1);
+    // s.push(2);
+    // s.push(3);
+    // alert(s);
+    // s.pop()
+    // alert(s);
+    // alert(s.peek())
+    // alert(s.isEmpty())
+    // alert(s.size())
 
 
+    // 函数: 将十进制转换成二进制
+    function dec2bin(decNumber) {
+        // 1. 定义站对象
+        var stack = new Stack()
+        // 2.循环操作
+        while (decNumber > 0) {
+            //2.1 获取余数 放入到栈中
+            stack.push(decNumber % 2)
+
+            //2.2 获取整出后的结果 作为下一次运算的数字
+            decNumber = Math.floor(decNumber / 2)
+        }
+
+        // 3. 从栈中取出0 1
+        var binaryString = ''
+        while (!stack.isEmpty()) {
+            binaryString += stack.pop()
+        }
+        return binaryString
+    }
+
+    //测试十进制转二进制
+    alert(dec2bin(100));
+    alert(dec2bin(10));
+    alert(dec2bin(1000));
 </script>
 </body>
 </html>
