--- a/08_哈希表/index.html
+++ b/08_哈希表/index.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>哈希表</title>
 </head>
 <body>
+<script>
+    //设计哈希函数
+    // 1>将字符串转换成比较打的数字: hashCode
+    // 2>将大的数字hashCode压缩到数组范围(大小)之内
+    function hashFunc(str, size) {
+        //1.定义hashCode变量
+        let hashCode = 0
 
+        //2.霍纳算法,来计算hashCode的值
+        //cats -> ‘a’ -> Unicode编码
+        for (let i = 0; i < str.length; i++) {
+            hashCode = 37 * hashCode + str.charCodeAt(i)
+        }
+
+        //3.取余操作
+        let index = hashCode % size
+
+        return index
+    }
+
+    //测试hash函数
+    alert(hashFunc('abc', 7))
+    alert(hashFunc('cba', 7))
+    alert(hashFunc('nba', 7))
+    alert(hashFunc('mba', 7))
+</script>
 </body>
 </html>
