--- a/08_哈希表/02_哈希表实现.html
+++ b/08_哈希表/02_哈希表实现.html
@@ -47,7 +47,7 @@
             let bucket = this.storage[index] //[![[0,1]]
             //只能用whether引导主语、表语或同位语从句，不可用if
             // 3.check whether（是否） the bucket is null
-            if (bucket === null) {
+            if (bucket == null) {
                 bucket = []
                 //sure there's a bucket
                 this.storage[index] = bucket
@@ -55,7 +55,7 @@
             // 4.whether to modify(v:修改) data
             for (let i = 0; i < bucket.length; i++) {
                 let tuple = bucket[i] //[[![0,1]]]
-                if (tuple[0] === key) {
+                if (tuple[0] == key) {
                     tuple[1] = value
                     return
                 }
@@ -79,13 +79,13 @@
             // 2.Fetch the corresponding bucket |according to|（根据...） the index
             let bucket = this.storage[index] //[![[0,1]]
             // 3.check whether（是否） the bucket is null
-            if (bucket === null) {
+            if (bucket == null) {
                 bucket = []
             }
             //4.if you have a bucket to do a linear lookup
             for (let i = 0; i < bucket.length; i++) {
                 let tuple = bucket[i]
-                if (tuple[0] === key) {
+                if (tuple[0] == key) {
                     return tuple[1]
                 }
 
@@ -107,11 +107,11 @@
             // 2.Fetch the corresponding bucket |according to|（根据...） the index
             let bucket = this.storage[index] //[![[0,1]]
             // 3.check whether（是否） the bucket is null
-            if (bucket === null) return null
+            if (bucket == null) return null
             // 4. If it has a bucket, it does a linear lookup and removes it
             for (let i = 0; i < bucket.length; i++) {
                 let tuple = bucket[i]
-                if (tuple[0] === key) {
+                if (tuple[0] == key) {
                     bucket.splice(i, 1)
                     this.count--
                     return tuple[1]
@@ -121,7 +121,26 @@
             return null
         }
 
+        //other methods
+        HashTable.prototype.isEmpty = function () {
+            return this.count = 0
+        }
+
+        //gets the number of elements in the hash table
+        HashTable.prototype.size = function () {
+            return this.count
+        }
+        // analyze before you write
     }
+
+
+    //测试哈希表
+    let ht = new HashTable()
+    ht.put('abc', '123')
+    ht.put('cba', '321')
+    ht.put('nba', '521')
+    ht.put('mba', '520')
+    alert(ht.get('mba'))
 </script>
 </body>
 </html>
